--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   choice: ^2.3.2
   cool_dropdown: ^2.1.1
+  chip_list: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -58,8 +59,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    #  - images/a_dot_burr.jpeg
+    - assets/images/backgroundTest.png
+    - assets/images/university.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
