--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   choice: ^2.3.2
   cool_dropdown: ^2.1.1
   chip_list: ^3.1.0
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
