--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
     #  - images/a_dot_burr.jpeg
     - assets/images/backgroundTest.png
     - assets/images/university.png
+    - assets/images/homeBackground.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
