--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     #  - images/a_dot_burr.jpeg
-    - assets/images/backgroundTest.png
+    - assets/images/backgroundTest.jpeg
     - assets/images/university.png
     - assets/images/homeBackground.jpg
   #   - images/a_dot_ham.jpeg
