--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cool_dropdown: ^2.1.1
   chip_list: ^3.1.0
   loading_animation_widget: ^1.3.0
+  xml: ^6.6.1
+  archive: ^4.0.7
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
