--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/images/university.png
     - assets/images/homeBackground.jpg
     - assets/data/dummy.json
+    - assets/routineDocx/65B.docx
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
