--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   xml: ^6.6.1
   archive: ^4.0.7
   path_provider: ^2.1.5
+  liquid_glass_container_plus: ^1.0.5
+  oc_liquid_glass: ^0.2.1
 
 dev_dependencies:
   flutter_test:
