--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   archive: ^4.0.7
   path_provider: ^2.1.5
   fpdart: ^1.2.0
+  supabase_flutter: ^2.12.0
 
 dev_dependencies:
   flutter_test:
