--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.1.5
   fpdart: ^1.2.0
   supabase_flutter: ^2.12.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
